# codexconclave

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  instruments.md  providers.md
examples/01_research_team/: README.md  main.py
examples/02_custom_instruments/: README.md  main.py
examples/03_cascade_pipeline/: README.md  main.py
examples/04_memory_conclave/: README.md  main.py
examples/05_hierarchical_conclave/: README.md  main.py
src/codexconclave/: __init__.py  conclave.py  directive.py  protocol.py
src/codexconclave/arbiter/: __init__.py  base.py  core.py
src/codexconclave/cascade/: __init__.py  decorators.py  pipeline.py  state.py
src/codexconclave/chronicle/: __init__.py  memory.py  store.py
src/codexconclave/cli/: __init__.py  commands.py
src/codexconclave/instruments/: __init__.py  base.py  structured.py
src/codexconclave/llm/: __init__.py  provider.py  registry.py
src/codexconclave/observability/: __init__.py  tracker.py
src/codexconclave/signals/: __init__.py  bus.py  listener.py  types.py
src/codexconclave/utilities/: __init__.py  context.py  formatting.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_conclave_flow.py
tests/unit/: __init__.py  test_arbiter.py  test_cascade.py  test_chronicle.py  test_conclave.py  test_directive.py  test_instruments.py  test_llm_provider.py  test_llm_registry.py  test_protocol.py  test_signals.py
