[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codexconclave"
version = "1.0.0"
description = "A production-grade framework for orchestrating autonomous AI agent teams"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "CodexConclave Contributors"}]
keywords = ["ai", "agents", "llm", "automation", "orchestration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "litellm>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "instructor>=1.0.0",
    "tiktoken>=0.5.0",
    "regex>=2023.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
memory = [
    "lancedb>=0.5.0",
    "sentence-transformers>=2.0.0",
]
knowledge = [
    "chromadb>=0.4.0",
    "fastembed>=0.2.0",
]
all = [
    "codexconclave[memory,knowledge]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
codex = "codexconclave.cli.commands:main"

[project.urls]
Homepage = "https://github.com/codexconclave/codexconclave"
Documentation = "https://docs.codexconclave.ai"
Repository = "https://github.com/codexconclave/codexconclave"
Issues = "https://github.com/codexconclave/codexconclave/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codexconclave"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short --cov=src/codexconclave --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.10"
